--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   var twoSum = function(nums, target) { // map.has 表示是否存在指定元素，返回bool值  map.get 表示是否存在指定元素
     var map = new Map();
     for(let j=0; j < nums.length; j++){
-      map.set(nums[i], j);
+      map.set(nums[j], j);
     }
     for( let j =0; j < nums.length;j++){
       let complement = target - nums[j];
@@ -36,5 +36,16 @@
       }
     }
   }
-
+  twoSum([2, 7, 8, 14], 22)
+  var threeSum = function(nums, target) {
+    var map = new Map();
+    for (let i = 0; i < nums.length; i++) {
+      let complement = target -nums[i];
+      if(map.has(complement)){
+        return [map.get(complement), i];
+      }
+      map.set(nums[i], i);
+    }
+  }
+  threeSum([2, 7, 8, 14], 15)
 </script>
